Small CSS fix to capitalize roles on mobile (#541)

--- a/frontend/src/components/viewMembers/MemberCard.module.css
+++ b/frontend/src/components/viewMembers/MemberCard.module.css
@@ -59,9 +59,12 @@
     font-size: 12px;
 }
 
+.membercard-type {
+    text-transform: capitalize;
+}
+
 .membercard-bottom .membercard-type {
     font-size: 14px;
-    text-transform: capitalize;
     font-weight: bolder;
 }
 
